<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/products"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_customer" />
       <!--<item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_orderForm"
            android:icon="@drawable/orderform"
            android:title="@string/menu_orderForm" />-->
        <item
            android:id="@+id/nav_supplier"
            android:icon="@drawable/ic_baseline_local_shipping_24"
            android:title="@string/menu_supplier" />
        <item
            android:id="@+id/nav_ledger"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_ledger" />


  <item
      android:title="@string/menu_report">
<menu>

    <item
        android:id="@+id/nav_account"
        android:title="@string/menu_accounts" />
    <item
        android:id="@+id/nav_collection"
        android:title="@string/menu_collection" />
        <item
            android:id="@+id/nav_sales"
            android:title="@string/menu_sales" />
    <item
        android:id="@+id/nav_cash"
        android:title="@string/menu_cash" />
    <item
        android:id="@+id/nav_credit"
        android:title="@string/menu_credit" />
    <item
        android:id="@+id/nav_mpesa"
        android:title="@string/menu_mpesa" />
        <item
            android:id="@+id/nav_dayReport"
            android:title="@string/menu_dayReport" />
        <item
            android:id="@+id/nav_inventory"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/nav_expired"

        android:title="@string/menu_expired" />
    <!--    <item
        android:id="@+id/nav_returned"
        android:title="@string/menu_returned" />
        -->
        <item
            android:id="@+id/nav_transaction"
            android:title="@string/menu_transaction" />

</menu>
  </item>
    <item
        android:title="@string/action_settings">
        <menu>

            <item android:id="@+id/nav_users"
                android:title="@string/menu_users"
                android:icon="@drawable/ic_baseline_supervised_user_circle_24"/>

            <item android:id="@+id/nav_profile"
                android:title="@string/menu_profile"
                android:icon="@drawable/ic_baseline_person_24"/>



        </menu>
    </item>

</group>

</menu>