<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.denkiri.pharmacy.ui.home.HomeFragment"
        android:label="@string/menu_pos"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.denkiri.pharmacy.ui.products.ProductsFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.denkiri.pharmacy.ui.categories.CategoriesFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_categories" />
    <fragment
        android:id="@+id/nav_add_customer"
        android:name="com.denkiri.pharmacy.ui.customers.AddCustomerFragment"
        android:label="@string/add_customer"
        tools:layout="@layout/fragment_add_customer" />
    <fragment
        android:id="@+id/nav_customer"
        android:name="com.denkiri.pharmacy.ui.customers.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/customer_fragment" />
    <fragment
        android:id="@+id/nav_order"
        android:name="com.denkiri.pharmacy.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/order_fragment" />
    <fragment
        android:id="@+id/nav_orderForm"
        android:name="com.denkiri.pharmacy.ui.orderform.OrderFormFragment"
        android:label="@string/menu_orderForm"
        tools:layout="@layout/order_form_fragment" />
    <fragment
        android:id="@+id/nav_supplier"
        android:name="com.denkiri.pharmacy.ui.supplier.SupplierFragment"
        android:label="@string/menu_supplier"
        tools:layout="@layout/supplier_fragment" />
    <fragment
        android:id="@+id/nav_ledger"
        android:name="com.denkiri.pharmacy.ui.ledger.LedgerFragment"
        android:label="@string/menu_ledger"
        tools:layout="@layout/ledger_fragment"/>
    <fragment
        android:id="@+id/nav_users"
        android:name="com.denkiri.pharmacy.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/users_fragment"/>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.denkiri.pharmacy.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment"/>
    <fragment
        android:id="@+id/nav_add_category"
        android:name="com.denkiri.pharmacy.ui.categories.AddCategoryFragment"
        android:label="@string/add_category"
        tools:layout="@layout/fragment_add_category"/>
    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.denkiri.pharmacy.ui.reports.CustomerTransaction"
        android:label="@string/menu_transaction"
        tools:layout="@layout/customer_transaction_fragment"/>
    <fragment
        android:id="@+id/nav_account"
        android:name="com.denkiri.pharmacy.ui.reports.ReceivableReport"
        android:label="@string/menu_accounts"
        tools:layout="@layout/receivable_report_fragment"/>
    <fragment
        android:id="@+id/nav_collection"
        android:name="com.denkiri.pharmacy.ui.reports.CollectionReport"
        android:label="@string/menu_collection"
        tools:layout="@layout/collection_report_fragment"/>
    <fragment
        android:id="@+id/nav_sales"
        android:name="com.denkiri.pharmacy.ui.reports.SalesReport"
        android:label="@string/menu_sales"
        tools:layout="@layout/sales_report_fragment"/>
    <fragment
        android:id="@+id/nav_cash"
        android:name="com.denkiri.pharmacy.ui.reports.CashSaleReport"
        android:label="@string/menu_cash"
        tools:layout="@layout/cash_sale_report_fragment"/>
    <fragment
        android:id="@+id/nav_credit"
        android:name="com.denkiri.pharmacy.ui.reports.CreditSaleReport"
        android:label="@string/menu_credit"
        tools:layout="@layout/credit_sale_report_fragment"/>
    <fragment
        android:id="@+id/nav_mpesa"
        android:name="com.denkiri.pharmacy.ui.reports.MpesaSaleReport"
        android:label="@string/menu_mpesa"
        tools:layout="@layout/mpesa_sale_report_fragment"/>
    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.denkiri.pharmacy.ui.reports.InventoryReport"
        android:label="@string/menu_inventory"
        tools:layout="@layout/inventory_report_fragment"/>
    <fragment
        android:id="@+id/nav_edit_category"
        android:name="com.denkiri.pharmacy.ui.categories.EditFragment"
        android:label="@string/edit_category"
        tools:layout="@layout/fragment_edit_category"
        />
    <fragment
        android:id="@+id/nav_add_supplier"
        android:name="com.denkiri.pharmacy.ui.supplier.AddSupplierFragment"
        android:label="@string/add_supplier"
        tools:layout="@layout/fragment_add_supplier"
        />
    <fragment
        android:id="@+id/nav_edit_supplier"
        android:name="com.denkiri.pharmacy.ui.supplier.EditSupplierFragment"
        android:label="@string/edit_supplier"
        tools:layout="@layout/edit_supplier_fragment"
        />
    <fragment
        android:id="@+id/nav_add_product"
        android:name="com.denkiri.pharmacy.ui.products.AddProductFragment"
        android:label="@string/add_product"
        tools:layout="@layout/fragment_add_product"
        />
    <fragment
        android:id="@+id/nav_edit_product"
        android:name="com.denkiri.pharmacy.ui.products.EditProduct"
        android:label="@string/edit_product"
        tools:layout="@layout/fragment_edit_product"
        />
    <fragment
        android:id="@+id/nav_edit_customer"
        android:name="com.denkiri.pharmacy.ui.customers.EditCustomerFragment"
        android:label="@string/edit_customer"
        tools:layout="@layout/fragment_edit_customer"
        />
    <fragment
        android:id="@+id/nav_dayReport"
        android:name="com.denkiri.pharmacy.ui.reports.DayReportFragment"
        android:label="@string/menu_dayReport"
        tools:layout="@layout/day_report_fragment"
        />
    <fragment
        android:id="@+id/nav_daySalesReport"
        android:name="com.denkiri.pharmacy.ui.reports.DaySalesFragment"
        android:label="@string/menu_dayReport"
        tools:layout="@layout/fragment_day_sales"
        />
    <fragment
        android:id="@+id/nav_expired"
        android:name="com.denkiri.pharmacy.ui.reports.ExpiredProducts"
        android:label="@string/menu_expired"
        tools:layout="@layout/expired_products_fragment"
        />
    <fragment
        android:id="@+id/nav_add_payment"
        android:name="com.denkiri.pharmacy.ui.ledger.AddPayment"
        android:label="@string/add_payment"
        tools:layout="@layout/fragment_add_payment"
        />


</navigation>