<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:layout_marginTop="50dp"
    tools:context=".ui.main.AboutFragment">

    <ImageView
        android:src="@drawable/appstore"
        android:layout_width="100dp"
        android:layout_centerHorizontal="true"
        android:layout_height="100dp"
        android:id="@+id/logo"
        />
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/menu_pos"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/appName"
        android:orientation="horizontal"
        android:id="@+id/version"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/appVersionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/current_version"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        />
        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:text=""
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        />

    </LinearLayout>
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_below="@id/version"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/app_description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        />
    <TextView
        android:id="@+id/con"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_below="@id/descriptionText"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="Contacts"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/con"
        android:orientation="horizontal"

        android:id="@+id/em"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:text="Email:"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:layout_gravity="center_vertical"
            android:text="@string/deletech_ke_gmail_com"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/em"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/co"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/contactText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:text="@string/call_whatsapp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/_254_0700107838"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/privacyPolicy"
        android:layout_below="@+id/co"
        android:orientation="horizontal">
        <com.denkiri.pharmacy.utils.CircleImageView

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_margin="1dp"
            android:src="@drawable/ic_baseline_thumbs_up_down_24"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_overlay="true"
            app:civ_border_width="1dp"
            app:civ_fill_color="@color/white"/>
        <TextView
            android:id="@+id/privacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="12sp"
            android:padding="5dp"
            android:text="@string/privacy_policy"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/grey" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:id="@+id/next"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_navigate_next_24"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/terms"
        android:layout_below="@+id/privacyPolicy"
        android:orientation="horizontal">
        <com.denkiri.pharmacy.utils.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_margin="1dp"
            android:src="@drawable/ic_baseline_thumbs_up_down_24"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_overlay="true"
            app:civ_border_width="1dp"
            app:civ_fill_color="@color/white"/>
        <TextView
            android:id="@+id/aboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="12sp"
            android:padding="5dp"
            android:text="@string/terms_conditions"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/grey" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:id="@+id/next2"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_navigate_next_24"/>
    </LinearLayout>
    <TextView
        android:id="@+id/copyRights"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/copyRight"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>