<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.ui.login.VerifyPhoneFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:id="@+id/backtoauth"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:layout_alignParentLeft="true">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:padding="10dp"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"

            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_message_24" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/sit_back_amp_relax_while_we_verify_your_mobile_number"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal"
                android:paddingLeft="40dp"
                android:visibility="invisible"
                android:paddingRight="40dp"
                android:text="Enter the OTP below in case if we fail to detect the SMS automatically"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <com.denkiri.pharmacy.utils.OtpEditText
                android:id="@+id/editTextCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="6"
                android:textIsSelectable="false"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signin"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:text="@string/verify"
                android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/white"
                android:textSize="16.5sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:cornerRadius="5dp"


                />

            <TextView
                android:id="@+id/resendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/resend_otp"
                android:textColor="@color/colorAccent"
                android:textSize="16.5sp"
                android:visibility="invisible" />


        </LinearLayout>
        <ProgressBar
            android:id="@+id/avi"
            android:padding="12dp"
            android:layout_width="45dp"
            android:layout_below="@+id/main"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

    </RelativeLayout>

</FrameLayout>